--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,17 +33,21 @@
             android:name="com.example.cmufriends.HomeActivity"
             android:label="@string/title_activity_home" >
         </activity>
+        <activity
+            android:name="com.example.cmufriends.MapActivity"
+            android:label="MapActivity" >
+        </activity>
 
         <meta-data
             android:name="com.google.android.gms.version"
-            android:value="16" />
+            android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyCssAUyCL1NFbL_GQNuhszavXUhkSlU3zw" />
     </application>
-    
+
     <uses-feature
         android:glEsVersion="0x00020000"
-        android:required="true"/>
+        android:required="true" />
 
 </manifest>
