Google play services Library dependency error

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -39,7 +39,7 @@
         </activity>
         <meta-data
             android:name="com.google.android.gms.version"
-            android:value="2" />
+            android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyCssAUyCL1NFbL_GQNuhszavXUhkSlU3zw" />
