--- a/project.properties
+++ b/project.properties
@@ -13,3 +13,4 @@
 # Project target.
 target=android-19
 android.library.reference.1=../../../../../Downloads/adt-bundle-mac-x86_64-20131030/sdk/extras/google/google_play_services/libproject/google-play-services_lib
+android.library.reference.2=../../../../workspace/pulltorefresh
