--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,7 +17,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/cmu_mascot"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
@@ -28,6 +28,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.example.cmufriends.RegisterActivity"
+            android:label="@string/title_activity_profile" >
         </activity>
         <activity
             android:name="com.example.cmufriends.HomeActivity"
