--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,7 +17,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/cmu_mascot"
+        android:icon="@drawable/scotty_dog"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
@@ -40,10 +40,6 @@
         <activity
             android:name="com.example.cmufriends.MapActivity"
             android:label="MapActivity" >
-        </activity>
-        <activity
-            android:name="com.example.cmufriends.RegisterActivity"
-            android:label="RegisterActivity" >
         </activity>
 
         <meta-data
